# api/route/profile_route.go
@@ -1,21 +1,0 @@
-package route
-
-import (
-	"time"
-
-	"github.com/gin-gonic/gin"
-	"stontactics/api/controller"
-	"stontactics/bootstrap"
-	"stontactics/domain"
-	"stontactics/mongo"
-	"stontactics/repository"
-	"stontactics/usecase"
-)
-
-func NewProfileRouter(env *bootstrap.Env, timeout time.Duration, db mongo.Database, group *gin.RouterGroup) {
-	ur := repository.NewUserRepository(db, domain.CollectionUser)
-	pc := &controller.ProfileController{
-		ProfileUsecase: usecase.NewProfileUsecase(ur, timeout),
-	}
-	group.GET("/profile", pc.Fetch)
-}
