# docs/swagger.json
@@ -5,6 +5,52 @@
         "contact": {}
     },
     "paths": {
+        "/api/account": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Account"
+                ],
+                "summary": "Получить информацию о пользователе",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Account"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Account"
+                ],
+                "summary": "Удалить аккаунт",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.SuccessResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/folder": {
             "get": {
                 "security": [
@@ -203,8 +249,8 @@
                 }
             }
         },
-        "/api/profile": {
-            "get": {
+        "/api/reset/email": {
+            "post": {
                 "security": [
                     {
                         "Bearer": []
@@ -214,14 +260,72 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "ChangeEmail"
                 ],
-                "summary": "Получить информацию о пользователе",
+                "summary": "Отправить код на новую почту",
+                "parameters": [
+                    {
+                        "description": "create code request",
+                        "name": "createChangeEmailRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.ChangeEmailCreate"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Profile"
+                            "$ref": "#/definitions/domain.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/reset/email/confirm": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ChangeEmail"
+                ],
+                "summary": "Подтверждение новой почты",
+                "parameters": [
+                    {
+                        "description": "code request",
+                        "name": "codeRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.ChangeEmailConfirmRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
                         }
                     }
                 }
@@ -557,6 +661,38 @@
                 }
             }
         },
+        "/auth/{provider}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Login"
+                ],
+                "summary": "Вход по социальной сети",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "vk/google",
+                        "name": "provider",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "jwt token",
+                        "name": "token",
+                        "in": "query"
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/login": {
             "post": {
                 "produces": [
@@ -814,6 +950,53 @@
         }
     },
     "definitions": {
+        "domain.Account": {
+            "type": "object",
+            "properties": {
+                "avatar_url": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "pro": {
+                    "$ref": "#/definitions/domain.UserPro"
+                }
+            }
+        },
+        "domain.ChangeEmailConfirmRequest": {
+            "type": "object",
+            "required": [
+                "code"
+            ],
+            "properties": {
+                "code": {
+                    "type": "integer"
+                }
+            }
+        },
+        "domain.ChangeEmailCreate": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 1
+                }
+            }
+        },
         "domain.ConfirmRegisterCodeRequest": {
             "type": "object",
             "required": [
@@ -954,26 +1137,6 @@
             "properties": {
                 "url": {
                     "type": "string"
-                }
-            }
-        },
-        "domain.Profile": {
-            "type": "object",
-            "properties": {
-                "avatar_url": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "pro": {
-                    "$ref": "#/definitions/domain.UserPro"
                 }
             }
         },
